--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -804,6 +804,17 @@
     "for hex in labels:\n",
     "    print(hex['label'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "7139372c-fd4e-4781-a111-fc49b324c365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test_Board6_labeled.json', 'w') as f:\n",
+    "    json.dump(labels, f, indent=4)"
+   ]
   }
  ],
  "metadata": {
