create embeddings for rulebook and initial animal pattern encoding

--- a/HarmoniesRender.ipynb
+++ b/HarmoniesRender.ipynb
@@ -141,7 +141,9 @@
     "color_ranges = json.load(f)\n",
     "\n",
     "# load token vectors\n",
-    "token_avgs = pd.read_csv('average_token_vectors.csv', index_col=0)"
+    "token_avgs = pd.read_csv('average_token_vectors.csv', index_col=0)\n",
+    "\n",
+    "# import rulebook\n"
    ]
   },
   {
