testing prompt to match spirit card

--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 168,
    "id": "c6caa89b-568d-4678-815e-db63405a89c1",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,8 @@
     "f = open('token_color_ranges.json')\n",
     "color_ranges = json.load(f)\n",
     "\n",
-    "# load animals\n",
-    "f = open('animals.json')\n",
+    "# load animal patterns\n",
+    "f = open('animal_patterns.json')\n",
     "animals = json.load(f)"
    ]
   },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 169,
    "id": "83b2d3ef-01ec-4c96-8df3-a439d4f46947",
    "metadata": {},
    "outputs": [],
@@ -745,172 +745,75 @@
     "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 4})\n",
     "\n",
     "# wake up Mistral\n",
-    "llm = Ollama(model=\"mistral\") "
+    "llm = Ollama(model=\"mistral\") \n",
+    "\n",
+    "# load test board\n",
+    "f = open('test_Board6_hex_labeled.json')\n",
+    "labels = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 193,
    "id": "f6cdc883-e8a5-4e17-961a-f60d2721676a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = PromptTemplate(\n",
-    "    input_variables=[\"labels\", \"animals\", \"context\"],\n",
+    "animal_match_prompt = PromptTemplate(\n",
+    "    input_variables=[\"animals\", \"labels\"],\n",
     "    template=\"\"\"\n",
-    "You are an assistant for the board game *Harmonies*. Your task is to analyze the board state and infer what spirit and animal cards are present, based on the terrain tokens and cube placements.\n",
+    "You are a board game AI assistant tasked with identifying which **spirit animal pattern** appears on a given board.\n",
     "\n",
-    "The user has provided:\n",
-    "- The current board state (detected from pixel-perfect processing of an image)\n",
-    "- A list of animal cards in this game\n",
-    "- Relevant rules from the rulebook (retrieved automatically)\n",
+    "Each animal pattern includes:\n",
+    "- A central tile (dx=0, dy=0), with relative hex coordinates using a **doubled-height hex grid** system.\n",
+    "- In the **doubled-height hex grid** system, vertical movement changes y-coordinates by 2 and movement to horizontal offset neighbors changes x-coordinates by 1 and y by 1. \n",
+    "- Optional conditions:\n",
+    "    - `terrain`: token color on that tile\n",
+    "    - `stack_condition`: exact order and height of tokens\n",
+    "    - `cube`: if true, a cube (animal or spirit) must be present on that tile\n",
     "\n",
-    "### Board Token Layout ###\n",
-    "The following JSON describes each hex:\n",
-    "{labels}\n",
+    "The board state is a list of hexes with:\n",
+    "- `\"coord\"`: the (x, y) position of the hex\n",
+    "- `\"label\"`: a list of tokens and cubes (top to bottom)\n",
     "\n",
-    "Each entry includes the coordinates of the hexagon, and the stack order of any cubes or terrains present with the topmost item listed first.\n",
+    "You must:\n",
+    "1. Check each spirit pattern against every possible board hex as a potential center.\n",
+    "2. Consider all valid **rotations and reflections** of each pattern.\n",
+    "3. Match patterns **exactly** — tokens, stack height, cube, and terrain must match.\n",
+    "4. There is **exactly one** spirit on the board.\n",
     "\n",
-    "### Available Animal Cards ###\n",
-    "Each animal card specifies a pattern and required terrain. Here is the list:\n",
+    "---\n",
+    "\n",
+    "### Spirit Patterns\n",
     "{animals}\n",
     "\n",
-    "### Rules Context ###\n",
-    "Use these excerpts from the Harmonies rulebook to guide your reasoning:\n",
-    "{context}\n",
+    "---\n",
     "\n",
-    "### Your Task ###\n",
-    "Based on the token layout, rules, and animal card patterns:\n",
-    "1. Identify which spirit card was most likely chosen (if possible)\n",
-    "2. Identify which animal cards match a placed pattern **and** have a cube placed\n",
+    "### Board State\n",
+    "{labels}\n",
     "\n",
-    "### Output Format ###\n",
-    "Respond in JSON format:\n",
+    "---\n",
+    "\n",
+    "### Task\n",
+    "Identify the **one** spirit pattern that matches the board.\n",
+    "\n",
+    "Only output JSON in this format:\n",
     "{{\n",
-    "  \"spirit\": \"name of the spirit\",\n",
-    "  \"animals\": [\"animal1\", \"animal2\", ...]\n",
+    "  \"spirit\": \"NAME OF MATCHING SPIRIT\"\n",
     "}}\n",
     "\"\"\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "id": "af7bc359-bfb6-4eed-9bc9-9699b1370665",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Based on the provided board state and rules, I cannot definitively identify a matching spirit card as there are no specific patterns or required terrain that correspond to any spirit cards in your game.\n",
-      "\n",
-      "For animal cards, let's analyze the hexagons that have an animal card pattern (blue) and have a cube placed:\n",
-      "- [27, 125], [71, 150], [71, 200], [115, 175], [159, 150], [204, 75]\n",
-      "\n",
-      "Now let's check which animal cards have these patterns and if the cube color matches:\n",
-      "- Alligator/crocodile (pattern: blue, cube: none)\n",
-      "- Alpaca/llama (pattern: none, cube: none)\n",
-      "- Arctic Fox (pattern: none, cube: none)\n",
-      "- Bat (pattern: none, cube: none)\n",
-      "- Bear (pattern: none, cube: none)\n",
-      "- Bee (pattern: none, cube: none)\n",
-      "- Caracara (pattern: none, cube: none)\n",
-      "- Duck (pattern: none, cube: none)\n",
-      "- Fennec Fox (pattern: none, cube: none)\n",
-      "- Fish (pattern: none, cube: none)\n",
-      "- Flamingo (pattern: none, cube: none)\n",
-      "- Frog (pattern: none, cube: none)\n",
-      "- Hedgehog (pattern: none, cube: none)\n",
-      "- Kingfisher (pattern: none, cube: none)\n",
-      "- Koala (pattern: none, cube: none)\n",
-      "- Ladybug/lady bird (pattern: none, cube: none)\n",
-      "- Lion (pattern: none, cube: none - not the same as red or brown)\n",
-      "- Lizard (pattern: none, cube: none)\n",
-      "- Macaw (pattern: none, cube: none)\n",
-      "- Macaque (pattern: none, cube: none)\n",
-      "- Manta Ray (pattern: none, cube: none)\n",
-      "- Meerkat (pattern: none, cube: none)\n",
-      "- Otter (pattern: none, cube: none)\n",
-      "- Panther (pattern: none, cube: none - not the same as red or brown)\n",
-      "- Peacock (pattern: none, cube: none)\n",
-      "- Penguin (pattern: none, cube: none)\n",
-      "- Pig (pattern: none, cube: none)\n",
-      "- Rabbit (pattern: none, cube: none)\n",
-      "- Rat (pattern: none, cube: none)\n",
-      "- Rhino (pattern: none, cube: none - not the same as red or brown)\n",
-      "- Squirrel (pattern: none, cube: none)\n",
-      "- Tiger (pattern: none, cube: none - not the same as red or brown)\n",
-      "- Walrus (pattern: none, cube: none)\n",
-      "- Wolf (pattern: none, cube: none - not the same as red or brown)\n",
-      "- Zebra (pattern: none, cube: none)\n",
-      "\n",
-      "Since there are no animal cards that match a placed pattern with a cube and also have a cube of the correct color on your board, the output will be an empty array for now. If new information becomes available, I'll re-evaluate the answer accordingly.\n",
-      "\n",
-      "{\n",
-      "  \"spirit\": \"\",\n",
-      "  \"animals\": []\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Use the token layout to fetch relevant rules:\n",
-    "query_for_rag = f\"The board contains tokens arranged like: {labels}\"  # can truncate if huge\n",
-    "retrieved_docs = retriever.get_relevant_documents(query_for_rag)\n",
-    "context = \"\\n\\n\".join(doc.page_content for doc in retrieved_docs)\n",
+    ")\n",
     "\n",
     "chain = LLMChain(\n",
     "    llm=llm,\n",
-    "    prompt=prompt \n",
+    "    prompt=animal_match_prompt \n",
     ")\n",
     "\n",
     "# Run LLMChain\n",
     "result = chain.run({\n",
-    "    \"labels\": labels,\n",
     "    \"animals\": animals,\n",
-    "    \"context\": context\n",
+    "    \"labels\": labels,\n",
     "})\n",
-    "\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "e1dabe23-c095-459f-87ee-bb8d2475b5fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Elephant (Elephas maximus)\n"
-     ]
-    }
-   ],
-   "source": [
-    "cat = cv2.imread('test_cat.png')\n",
-    "\n",
-    "prompt = PromptTemplate(\n",
-    "    input_variables=[\"image\"],\n",
-    "    template=\"\"\"\n",
-    "\n",
-    "What animal is on this card?\n",
-    "\n",
-    "Image: {image}\n",
-    "\n",
-    "Respond with a single string corresponding to the animal.\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "chain = LLMChain(llm=llm, prompt=prompt)\n",
-    "\n",
-    "result = chain.run({\n",
-    "    \"image\" : image,\n",
-    "    }\n",
-    "                  )\n",
     "\n",
     "print(result)"
    ]
