OpenAI API tests and initial coord. conversion

--- a/HarmoniesRender.ipynb
+++ b/HarmoniesRender.ipynb
@@ -170,12 +170,13 @@
     "        \"coord\": hex[\"coord\"],\n",
     "        \"label\": label\n",
     "    }) \n",
-    "\n",
-    "\n",
-    "## now we do genAi stuff, need to\n",
     "    \n",
-    "# infer spirit and animal placement\n",
+    "# detect spirit and animal placement\n",
     "\n",
+    "\n",
+    "    \n",
+    "## GEN AI ##\n",
+    "    \n",
     "# infer terrain and habitat features from\n",
     "# - Spirt Card\n",
     "# - Animal Cards\n",
