--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -760,7 +760,7 @@
    "outputs": [],
    "source": [
     "animal_match_prompt = PromptTemplate(\n",
-    "    input_variables=[\"animals\", \"labels\"],\n",
+    "    input_variables=[\"animals\", \"board_text\"],\n",
     "    template=\"\"\"\n",
     "You are a board game AI assistant tasked with identifying which **spirit animal pattern** appears on a given board.\n",
     "\n",
@@ -768,16 +768,19 @@
     "- A central tile (dx=0, dy=0), with relative hex coordinates using a **doubled-height hex grid** system.\n",
     "- In the **doubled-height hex grid** system, vertical movement changes y-coordinates by 2 and movement to horizontal offset neighbors changes x-coordinates by 1 and y by 1. \n",
     "- Optional conditions:\n",
-    "    - `terrain`: token color on that tile\n",
-    "    - `stack_condition`: exact order and height of tokens\n",
+    "    - `terrain`: token color on that tile, if a single token is required \n",
+    "    - `stack_condition`: exact order and height of tokens, if multiple tokens are required\n",
     "    - `cube`: if true, a cube (animal or spirit) must be present on that tile\n",
     "\n",
-    "The board state is a list of hexes with:\n",
-    "- `\"coord\"`: the (x, y) position of the hex\n",
-    "- `\"label\"`: a list of tokens and cubes (top to bottom)\n",
+    "The board is sparse and may contain empty tiles. \n",
+    "Each tile contains a list of tokens (top to bottom) or may be empty (`[]`). Example stack: `[\"animal\", \"gray\"]` means a gray token with an animal cube on top.\n",
+    "\n",
+    "Each entry is a hex with:\n",
+    "- `\"coord\"`: the (x, y) location in doubled-height hex coordinates\n",
+    "- `\"label\"`: a list of tokens from bottom to top (can be empty)\n",
     "\n",
     "You must:\n",
-    "1. Check each spirit pattern against every possible board hex as a potential center.\n",
+    "1. Check each animal pattern against every possible board hex as a potential center.\n",
     "2. Consider all valid **rotations and reflections** of each pattern.\n",
     "3. Match patterns **exactly** — tokens, stack height, cube, and terrain must match.\n",
     "4. There is **exactly one** spirit on the board.\n",
@@ -790,7 +793,7 @@
     "---\n",
     "\n",
     "### Board State\n",
-    "{labels}\n",
+    "{board_text}\n",
     "\n",
     "---\n",
     "\n",
@@ -799,7 +802,8 @@
     "\n",
     "Only output JSON in this format:\n",
     "{{\n",
-    "  \"spirit\": \"NAME OF MATCHING SPIRIT\"\n",
+    "  \"spirit\": \"NAME OF MATCHING SPIRIT\",\n",
+    "  \"pos\": \"HEX COORDINATES OF MATCHING SPIRIT\"\n",
     "}}\n",
     "\"\"\"\n",
     ")\n",
@@ -816,6 +820,369 @@
     "})\n",
     "\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "300efc80-ecb9-4036-ac40-757b48f2e36b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " (0,0): Y,A      (0,2): R,S,R    (0,4): B,A      (0,6): Br,Br\n",
+      "  (1,1): Y          (1,3): G       (1,5): A,B,B     (1,7): A,B\n",
+      "(2,0): B           (2,2): Y       (2,4): R,R      (2,6): A,B\n",
+      "  (3,1): R,A        (3,3): G       (3,5): A       (3,7): B\n",
+      "(4,0): B           (4,2): A       (4,4): .      (4,6): A     (4,8): Br\n",
+      "\n",
+      "Explanation: I used the given format and abbreviated colors as specified. The top-to-bottom order of tokens is preserved for each hexagon, and empty hexagons are represented with a single period (.). The coordinates match those in the input board.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ascii_prompt = PromptTemplate(\n",
+    "    input_variables=[\"labels\"],\n",
+    "    template=\"\"\"\n",
+    "You are an expert in board games and spatial reasoning.\n",
+    "You are given a board state from a hexagonal grid using the **doubled-height coordinate system**, where vertical moves change y by 2 and diagonal neighbors differ by ±1 in both x and y.\n",
+    "\n",
+    "The board is sparse and may contain empty tiles. \n",
+    "Each tile contains a list of tokens (top to bottom) or may be empty (`[]`). Example stack: `[\"animal\", \"gray\"]` means a gray token with an animal cube on top.\n",
+    "\n",
+    "Each entry is a hex with:\n",
+    "- `\"coord\"`: the (x, y) location in doubled-height hex coordinates\n",
+    "- `\"label\"`: a list of tokens from bottom to top (can be empty)\n",
+    "\n",
+    "Your job is to display this board as an ASCII grid so that it's easy for a human to visually confirm the structure.\n",
+    "\n",
+    "### Guidelines:\n",
+    "- Include the coordinates of the hexagon labeled in the file.\n",
+    "- Use one letter per color (G=green, R=red, B=blue, Y=yellow, Br=brown, Gr=gray, A=animal, S=spirit)\n",
+    "\n",
+    "Here's an example of the output I want:\n",
+    "(0,0): A,G    (2,0): R     (4,0): .\n",
+    "  (1,1): Y     (3,1): B     (5,1): .\n",
+    "(0,2): G     (2,2): .     (4,2): Y\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Input Board\n",
+    "{labels}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ASCII Output\n",
+    "Show the board below using ASCII formatting as described.\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chain = LLMChain(\n",
+    "llm=llm,\n",
+    "prompt=ascii_prompt)\n",
+    "\n",
+    "# Run LLMChain\n",
+    "result = chain.run({\n",
+    "    \"labels\": labels,\n",
+    "})\n",
+    "\n",
+    "print(result)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "4dc4f59c-8d1b-46a0-a584-0ff92bf13278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "\n",
+    "with open(\"key.txt\", \"r\") as f:\n",
+    "    api_key = f.read().strip()\n",
+    "print(\"API key loaded successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "7f9c1492-3130-4eea-9896-031625812caa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to nicely formatted string\n",
+    "board_text = json.dumps(labels, indent=2)\n",
+    "\n",
+    "# Define the prompt\n",
+    "prompt = f\"\"\"\n",
+    "You are given a board state from a hexagonal grid using the **doubled-height coordinate system**, where vertical moves change y by 2 and diagonal neighbors differ by ±1 in both x and y.\n",
+    "\n",
+    "The board is sparse and may contain empty tiles. \n",
+    "Each tile contains a list of tokens (top to bottom) or may be empty (`[]`). Example stack: `[\"animal\", \"gray\"]` means a gray token with an animal cube on top.\n",
+    "\n",
+    "Each entry is a hex with:\n",
+    "- `\"coord\"`: the (x, y) location in doubled-height hex coordinates\n",
+    "- `\"label\"`: a list of tokens from bottom to top (can be empty)\n",
+    "\n",
+    "Your job is to display this board as an ASCII grid so that it's easy for a human to visually confirm the structure.\n",
+    "\n",
+    "### Guidelines:\n",
+    "- Include the coordinates of the hexagon labeled in the file.\n",
+    "- Use one letter per color (G=green, R=red, B=blue, Y=yellow, Br=brown, Gr=gray, A=animal, S=spirit)\n",
+    "\n",
+    "Here's an example of the output I want:\n",
+    "(0,0): A,G    (2,0): R     (4,0): .\n",
+    "  (1,1): Y     (3,1): B     (5,1): .\n",
+    "(0,2): G     (2,2): .     (4,2): Y\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Input Board\n",
+    "{board_text}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ASCII Output\n",
+    "Show the board below using ASCII formatting as described.\n",
+    "\"\"\"\n",
+    "\n",
+    "client = OpenAI(\n",
+    "  api_key=api_key\n",
+    ")\n",
+    "\n",
+    "# Send to OpenAI\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"gpt-4-1106-preview\",  # or \"gpt-3.5-turbo\" if needed\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are an expert in board games and spatial reasoning.\"},\n",
+    "        {\"role\": \"user\", \"content\": prompt}\n",
+    "    ],\n",
+    "    temperature=0.2  # Lower = more consistent output\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "ff20346e-b412-46e8-8a76-87b69a8c2cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the input board provided, here is the ASCII representation of the hexagonal grid using the doubled-height coordinate system:\n",
+      "\n",
+      "```\n",
+      "(0,0): Y      (2,0): B      (4,0): B\n",
+      "  (1,1): Y      (3,1): A,R,Br   (5,1): .\n",
+      "(0,2): S,R,R  (2,2): Y      (4,2): A,G\n",
+      "  (1,3): G      (3,3): G      (5,3): .\n",
+      "(0,4): A,B    (2,4): R,R    (4,4): .\n",
+      "  (1,5): A,B    (3,5): A,G    (5,5): .\n",
+      "(0,6): Br     (2,6): A,B    (4,6): A,G\n",
+      "  (1,7): A,B    (3,7): B      (5,7): .\n",
+      "(0,8): Br,Br  (2,8): A,R,Gr  (4,8): Br\n",
+      "```\n",
+      "\n",
+      "Explanation:\n",
+      "- Each hexagon's coordinates are displayed in parentheses.\n",
+      "- The tokens within each hexagon are represented by their first letter (as per the guidelines provided), with the order from bottom to top.\n",
+      "- A period (`.`) is used to represent an empty hexagon.\n",
+      "- The hexagons are staggered to represent the hexagonal grid visually.\n",
+      "- The `none` label has been interpreted as an empty hexagon.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the result\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "ce58f02b-ef09-4923-866d-16c9d70a69de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animal_match_prompt = f\"\"\"\n",
+    "Your task is to identify which **spirit animal pattern** appears on a given board state.\n",
+    "\n",
+    "Each entry in the given animal pattern JSON includes:\n",
+    "- A central tile (dx=0, dy=0), with other tiles in the pattern defined by relative hex coordinates using a **doubled-height hex grid** system.\n",
+    "- In the **doubled-height hex grid** system, vertical movement changes y-coordinates by 2 and movement to horizontal offset neighbors changes x-coordinates by 1 and y by 1. \n",
+    "- Optional conditions:\n",
+    "    - `terrain`: token color on that tile, if a single token is required \n",
+    "    - `stack_condition`: exact order and height of tokens, if multiple tokens are required\n",
+    "    - `cube`: if true, the pattern requires a cube (animal or spirit) on that tile\n",
+    "\n",
+    "The board is sparse and may contain empty tiles. \n",
+    "Each tile contains a list of tokens (top to bottom) or may be empty (`[]`). Example stack: `[\"animal\", \"gray\"]` means a gray token with an animal cube on top.\n",
+    "\n",
+    "Each entry in the given board_text is a hex with:\n",
+    "- `\"coord\"`: the (x, y) location in doubled-height hex coordinates\n",
+    "- `\"label\"`: a list of tokens from bottom to top (can be empty)\n",
+    "\n",
+    "You must:\n",
+    "1. Check each animal pattern against every possible board hex in board_text as a potential center.\n",
+    "2. Identify where the 'spirit' cube is placed.\n",
+    "3. Match the hex with the spirit cube and it's adjacent hexes with a pattern from the animals JSON.\n",
+    "2. Consider all valid **rotations and reflections** of each pattern.\n",
+    "\n",
+    "Considerations:\n",
+    "- the pattern must match exactly: token color, stack order, adjacent tiles, and placement of cube\n",
+    "- there is exactly one pattern match, given that there is one spirit cube\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Spirit Patterns\n",
+    "{animals}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Board State\n",
+    "{board_text}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Output\n",
+    "\n",
+    "Only output using a JSON in this format:\n",
+    "{{\n",
+    "  \"spirit\": \"NAME OF MATCHING SPIRIT\",\n",
+    "  \"pos\": \"HEX COORDINATES OF MATCHING SPIRIT\"\n",
+    "}}\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "client = OpenAI(\n",
+    "  api_key=api_key\n",
+    ")\n",
+    "\n",
+    "# Send to OpenAI\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"gpt-4-1106-preview\",  # or \"gpt-3.5-turbo\" if needed\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are an expert in board games and spatial reasoning.\"},\n",
+    "        {\"role\": \"user\", \"content\": animal_match_prompt}\n",
+    "    ],\n",
+    "    temperature=0.2  # Lower = more consistent output\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "fcdc70fa-d601-4ef1-9106-fd36b9411f68",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To solve this task, we need to iterate over each hex on the board, checking for the presence of a spirit cube. Once we find the spirit cube, we'll attempt to match the surrounding hexes with one of the spirit animal patterns, considering all valid rotations and reflections.\n",
+      "\n",
+      "First, let's identify the hex that contains the spirit cube:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"hex_coord\": [\n",
+      "    0,\n",
+      "    2\n",
+      "  ],\n",
+      "  \"label\": \"spirit, red, red\"\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "The spirit cube is located at hex coordinates (0, 2). Now we need to match this with one of the spirit animal patterns. We'll check each pattern to see if it fits the board state around the spirit cube's location.\n",
+      "\n",
+      "After examining the patterns and the board state, we find that the \"stork (spirit)\" pattern matches the board state around the spirit cube's location. Here's how the pattern matches:\n",
+      "\n",
+      "- The central tile of the pattern is at (0, 2) with a stack condition of height 2, top red, and bottom options that include red, which matches the stack \"spirit, red, red\".\n",
+      "- The tile at (1, 3) relative to the central tile is (1, 1) in the board state with a stack condition of height 2, top red, and bottom options that include brown, which matches the stack \"animal, red, brown\".\n",
+      "- The tile at (-1, -1) relative to the central tile is (-1, -1) in the board state with a terrain of yellow, which matches the single token \"yellow\".\n",
+      "\n",
+      "Therefore, the spirit animal pattern that appears on the given board state is the \"stork (spirit)\".\n",
+      "\n",
+      "Here is the output in the requested JSON format:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"spirit\": \"stork (spirit)\",\n",
+      "  \"pos\": \"[0, 2]\"\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "79de5529-7146-4d44-9992-5bbb7e876e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate_doubled(dx, dy, times=1):\n",
+    "    for _ in range(times % 6):\n",
+    "        dx, dy = -dy, dx + dy\n",
+    "    return dx, dy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "800dc7e8-3d4e-49d2-bb8c-92a687be99f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, -2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pattern = animals[0]\n",
+    "\n",
+    "print(rotate_doubled(test_pattern['pattern'][1]['dx'], test_pattern['pattern'][1]['dy'], times = 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "1641b75d-8f59-46d8-bfc0-cf92a33382a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'animal': 'domestic cat (spirit)', 'pattern': [{'dx': 0, 'dy': 0, 'terrain': 'green'}, {'dx': -1, 'dy': -1, 'stack_condition': {'height': 2, 'top': 'red', 'bottom_options': ['gray', 'brown', 'red']}}, {'dx': 1, 'dy': 1, 'stack_condition': {'height': 2, 'top': 'red', 'bottom_options': ['gray', 'brown', 'red']}, 'cube': True}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_pattern)"
    ]
   }
  ],
