--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "9a8a7903-4e80-48af-a71a-00ee71b6bec4",
    "metadata": {},
    "outputs": [
@@ -2322,7 +2322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Added or updated pattern for 'macaque' in animal_patterns.json\n"
+      "✅ Added or updated pattern for 'koala' in animal_patterns.json\n"
      ]
     }
    ],
@@ -2342,15 +2342,14 @@
     "\n",
     "# Example pattern definition (cube-relative)\n",
     "new_pattern = {\n",
-    "    \"animal\": \"macaque\",\n",
+    "    \"animal\": \"koala\",\n",
     "    \"pattern\": [\n",
-    "        {\"dq\": 0, \"dr\": 0, \"ds\": 0,  \"stack_condition\": {\n",
+    "        {\"dq\": 0, \"dr\": 0, \"ds\": 0, \"stack_condition\": {\n",
     "            \"height\": 2,\n",
-    "            \"top\": \"gray\",\n",
-    "            \"bottom_options\": [\"gray\"]},\n",
-    "        \"cube\": True},\n",
-    "        {\"dq\": -1, \"dr\": 0, \"ds\": 1, \"terrain\": \"blue\"},\n",
-    "        {\"dq\": -1, \"dr\": 1, \"ds\": 0, \"terrain\": \"blue\"}\n",
+    "            \"top\": \"green\",\n",
+    "            \"bottom_options\": [\"brown\"]},\n",
+    "         \"cube\": True},\n",
+    "        {\"dq\": -1, \"dr\": 0, \"ds\": 1, \"terrain\": \"green\"} \n",
     "    ]\n",
     "}\n",
     "\n",
